<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="left">

    <TextView
        android:id="@+id/currentQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_marginBottom="30dp"
        android:text="@string/hint_current_question"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radio_elem1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_weight="1"
            android:text="@string/hint_option1"/>

        <RadioButton
            android:id="@+id/radio_elem2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_weight="1"
            android:text="@string/hint_option2"/>

        <RadioButton
            android:id="@+id/radio_elem3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_weight="1"
            android:text="@string/hint_option3"/>

    </RadioGroup>

    <Button
        android:id="@+id/nextPollButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_next_poll" />

</LinearLayout>